--- a/src/components/shared/Carousel/cardCarousel.css
+++ b/src/components/shared/Carousel/cardCarousel.css
@@ -10,4 +10,51 @@
   justify-content: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+.p-carousel .p-carousel-prev:hover,
+.p-carousel .p-carousel-next:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.p-carousel .p-carousel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-item {
+  flex: 0 0 auto;
+  width: 24rem; /* Ensure it takes fixed width of 96 (24rem = 96) */
+  margin: 0; /* Remove any margin that might cause spacing issues */
+}
+
+.card-container {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+.carousel-item .group {
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  width: 20rem; /* Fixed width of 80 (20rem = 80) */
+  height: auto;
+  object-fit: cover;
+}
+
+.carousel-item .overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.3s;
+}
+
+.carousel-item .overlay:hover {
+  opacity: 0.75;
 }
